--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -1,3 +1,24 @@
+apiVersion: v1
 kind: Deployment
 metadata:
   name: ${project.artifactId}
+spec:
+  template:
+   spec:
+    containers:
+      - env:
+          - name: JAVA_OPTIONS
+            value: '-Dspring.profiles.active=openshift'
+        ports:
+         - containerPort: 5555
+           protocol: TCP
+        readinessProbe:
+          tcpSocket:
+            port: 5555
+          initialDelaySeconds: 20
+          timeoutSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 5555
+          initialDelaySeconds: 120
+          timeoutSeconds: 10
