--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ eureka.client.fetchRegistry=true
 #el nombre DNS del servicio se obtiene con la siguiente regla
 #<service-name>.<project-name>.svc.cluster.local
 eureka.client.serviceUrl.defaultZone=http://registerservice.myproject.svc.cluster.local:8761/eureka
+zuul.sensitiveHeaders=Cookie, Set-Cookie
