--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.fetchRegistry=true
 #<service-name>.<project-name>.svc.cluster.local
 eureka.client.serviceUrl.defaultZone=http://registerservice.myproject.svc.cluster.local:8761/eureka
 zuul.sensitiveHeaders=Cookie, Set-Cookie
+spring.zipkin.baseUrl=http://zipkinsvr.myproject.svc.cluster.local:9411
