configuraciones para el laboratorio de GFI del 28 junio 2018

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,5 +6,5 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 #el nombre DNS del servicio se obtiene con la siguiente regla
 #<service-name>.<project-name>.svc.cluster.local
-eureka.client.serviceUrl.defaultZone=http://registerservice.myproject.svc.cluster.local:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 zuul.sensitiveHeaders=Cookie, Set-Cookie
