--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -7,3 +7,5 @@ eureka.client.fetchRegistry=true
 #el nombre DNS del servicio se obtiene con la siguiente regla
 #<service-name>.<project-name>.svc.cluster.local
 eureka.client.serviceUrl.defaultZone=http://registerservice.microservicios.svc:8761/eureka
+zuul.sensitiveHeaders=Cookie, Set-Cookie
+zuul.prefix=/api
