--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,3 +8,4 @@ eureka.client.fetchRegistry=true
 #<service-name>.<project-name>.svc.cluster.local
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 zuul.sensitiveHeaders=Cookie, Set-Cookie
+zuul.prefix=/api
